fixing display page on mobile v2

--- a/src/routes/details/details.styles.scss
+++ b/src/routes/details/details.styles.scss
@@ -32,7 +32,6 @@
     &--summary {
       width: 30%;
       height: 100%;
-      overflow: scroll;
 
       display: flex;
       flex-direction: column;
@@ -40,9 +39,15 @@
       align-items: center;
       order: 2;
 
+      @media only screen and (max-width: $bp-medium) {
+        overflow: scroll;
+      }
+
       @media only screen and (max-width: $bp-small) {
         order: 1;
         width: 100%;
+        height: auto;
+        overflow: unset;
       }
 
       &--box {
